# G510

./: CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUBLISH.md  LICENSE  Makefile  README.md  build-deb.sh  install.sh  pyproject.toml
daemon/: g510-ctl.py  g510-daemon.py
daemon/g510/: __init__.py  __main__.py  config.py  dbus_iface.py  keyboard.py  lcd.py  lcd_wire.py  macrorec.py  macros.py  model.py  profiles.py  rgb.py
deb/: g510-daemon_0.1.0-1_all.deb  g510-gui_0.1.0-1_all.deb
debian/: changelog  control  copyright  g510-ctl.1  g510-daemon-autostart.desktop  g510-daemon.1  g510-daemon.install  g510-daemon.manpages  g510-daemon.postinst  g510-daemon.postrm  g510-gui.desktop  g510-gui.install  rules  watch
debian/source/: lintian-overrides
gui/: g510-gui.py
profiles/: default.json
profiles/macros/: mic-toggle.sh  screenshot.sh  sysinfo.sh
scripts/: g510-verify.sh  set-repo.sh
systemd/: g510-daemon.service
tests/: conftest.py  run_tests.py  test_comprehensive.py  test_g510.py  test_g510s.py  test_macrorec.py  test_new_features.py
udev/: 99-logitech-g510.rules
